[tool.poetry]
name = "apm-agent-utils"
version = "1.4"
description = "This package can help you create Elastic APM instrumentations using regex"
authors = ["vuonglv <it.vuonglv@gmail.com>"]
keywords = ["apm", "elastic", "utils", "apm-utils", "agent"]
homepage = "https://github.com/vuonglv1612/apm-agent-utils"
repository = "https://github.com/vuonglv1612/apm-agent-utils"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=2.7 || >=3.6"
elastic-apm = ">= 5.4.0, <7.0.0"
qualname = "^0.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
